--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ psycopg2-binary==2.9.9
 sqlparse==0.4.4
 typing_extensions==4.9.0
 tzdata==2024.1
+django-widget-tweaks==1.5.0
+pillow==10.2.0
+reportlab==4.1.0
+chardet==5.2.0
